Created Characters and Elements API. Created elements page, with editing, importing and exporting (need to finish implementation).
