# libs/models/src/characters/characters-types.ts
@@ -1,0 +1,5 @@
+import { Character } from './characters-classes';
+
+export type CharacterCreateBody = Partial<Pick<Character, 'ownerId' | 'name'>>;
+
+export type CharacterUpdateBody = Partial<Omit<Character, 'id' | 'ownerId'>>;
