# libs/models/src/elements/elements-types.ts
@@ -1,0 +1,5 @@
+import { Element } from './elements-classes';
+
+export type ElementCreateBody = Partial<Omit<Element, 'id'>>;
+
+export type ElementUpdateBody = Partial<Omit<Element, 'id'>>;
