# libs/models/src/index.ts
@@ -1,5 +1,7 @@
 export * from './api';
 export * from './auth';
+export * from './characters';
+export * from './elements';
 export * from './jobs';
 export * from './locations';
 export * from './npcs';
